--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.5"
@@ -20,6 +21,7 @@
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
     "eslint": "^8.20.0",
+    "miragejs": "^0.1.45",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
